poketwo/image-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: image-server
spec:
  replicas: 0
  selector:
    matchLabels:
      app: image-server
  template:
    metadata:
      labels:
        app: image-server
    spec:
      containers:
        - name: server
          image: ghcr.io/poketwo/image-server:latest
          ports:
            - containerPort: 8080
          resources:
            limits:
              memory: "2Gi"
              cpu: "1000m"
            requests:
              memory: "300Mi"
              cpu: "600m"
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
      imagePullSecrets:
        - name: ghcr-auth
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchLabels:
                    app: image-server
                topologyKey: kubernetes.io/hostname
