poketwo/image-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: image-server
  annotations:
    service.kubernetes.io/topology-aware-hints: auto
spec:
  selector:
    app: image-server
  ports:
    - port: 8080
