poketwo/image-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: image-server-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  rules:
    - host: server.poketwo.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: image-server
                port:
                  number: 8080
  tls:
    - hosts:
        - server.poketwo.io
      secretName: image-server-ingress-tls
